fixed picture text paragraph alignment

--- a/src/components/PictureText.css
+++ b/src/components/PictureText.css
@@ -2,6 +2,7 @@
     height: 100%;
     width: 100%;
     display: flex;
+    padding-bottom: 3em;
 }
 
 .Category{
@@ -14,6 +15,7 @@
     font-weight: Bold;
     font-size: 3em;
     max-width: 600px;
+    padding-top: 0.6em;
 }
 
 .Text{
